# practice

./: README.md  environment.yml  pyproject.toml
codewars/: descending_order.input  descending_order.rb
hackerearth/: odd_even.input  odd_even.rb
hackerrank/30_days_of_code/: 10_binary.rb  11_2d_array.rb  6.rb  8.rb  9_factorial.rb  class_vs_instance.rb
hackerrank/algorithms/dynamic_programming/: equal.rb
hackerrank/algorithms/graph theory/: graph.rb  journey_to_the_moon.rb
hackerrank/algorithms/implementation/: absolute_permutation.input  absolute_permutation.rb  acm_icpc_team.rb  almost_sorted.rb  angry_professor.rb  append_and_delete.rb  apple_and_orange.rb  beautiful_days.rb  beautiful_triplets.rb  (+47 more)
hackerrank/cracking_the_coding_interview/: anagram.rb  array_left_rotation.rb  balance_brackets.rb  find_running_median.rb  heap.rb  median.rb  queue.rb  ransom_note.rb  tries.rb
hackerrank/ruby/: closure_example.rb  closures.rb  combination.rb  convert_temp.rb  count_multibyte_char.rb  enumerable-collect.rb  factorial.rb  get_prime_numbers.rb  group_by_mark.rb  is_prime.rb  lambda.rb  lazy_evaluation.rb  process_text.rb  string_indexing.rb  string_methods.rb  strings_intro.rb  sum_terms.rb  two_charracters.rb
hackerrank/w28/: boat_trip.rb  great_xor.rb  lucky_number_eight.input  lucky_number_eight.rb  value_of_friendship.rb
leetcode/: 22_generate_parentheses.rb  6_gelombang.input  6_gelombang.rb  86_partition_list.input  86_partition_list.rb  91_decode_ways.rb  highland.input  highland.rb
leetcode/88_merge_sorted_array/: solution.py  solution_test.py
(+21 files in other folders)
