[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Dedy Prasetiady <dedy.berastagi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.1"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
